이차원 배열로 수정