@@ -6,6 +6,7 @@ import java.io.FileReader;
 import java.io.IOException;
 import java.util.List;
 import java.util.ArrayList;
+import java.util.Arrays;
 
 import org.springframework.data.util.Pair;
 import org.springframework.stereotype.Service;
@@ -29,15 +30,15 @@ public class CourseService {
 	private final UserRepository userRepository;
 
 	@Transactional
-	public Integer saveCourse(String createdUserID, Integer meter, List<Pair<Double, Double>> courseArray) throws IOException {
+	public Integer saveCourse(String createdUserID, Integer meter, List<List<Double>> courseArray) throws IOException {
 		User createdUser = userRepository.findById(createdUserID).orElseThrow();
 		Course course = Course.createCourse(createdUser, meter);
 		courseRepository.saveAndFlush(course);
 
 		String filename = "/b612bicycle/courses/" + course.getId().toString();
 		CSVWriter writer = new CSVWriter(new FileWriter(filename));
-		for (Pair<Double, Double> pair : courseArray) {
-			String[] data = {pair.getFirst().toString(), pair.getSecond().toString()};
+		for (List<Double> list : courseArray) {
+			String[] data = {list.get(0).toString(), list.get(1).toString()};
 			writer.writeNext(data);
 		}
 		writer.close();
@@ -46,16 +47,16 @@ public class CourseService {
 		return course.getId();
 	}
 
-	public List<Pair<Double, Double>> loadCourseArray(Integer courseId) throws FileNotFoundException, IOException, CsvValidationException {
+	public List<List<Double>> loadCourseArray(Integer courseId) throws FileNotFoundException, IOException, CsvValidationException {
 		Course course = courseRepository.findById(courseId).orElseThrow();
 
 		String filename = course.getArrayUrl();
 		CSVReader reader = new CSVReader(new FileReader(filename));
-		List<Pair<Double, Double>> courseArray = new ArrayList<>(); 
+		List<List<Double>> courseArray = new ArrayList<>(); 
 		
 		String[] nextLine;
 		while ((nextLine = reader.readNext()) != null) {
-			courseArray.add(Pair.of(Double.parseDouble(nextLine[0]), Double.parseDouble(nextLine[1])));
+			courseArray.add(Arrays.asList(Double.parseDouble(nextLine[0]), Double.parseDouble(nextLine[1])));
 		}
 		reader.close();
 		return courseArray;
